Bug 1357366 - Avoid a possible crash loop in Places Database corruption handling. r=past

MozReview-Commit-ID: BIN3ji68nAY